[package]
name = "ssl-test"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server", "http1", "http2"] }
rcgen = "0.14.7"
tokio = { version = "1.50.0", features = ["full"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring"] }

